<resources>
    <string name="app_name">Quan li hoc vien</string>

    <string name="email">E-mail</string>
    <string name="login">Đăng nhập</string>
    <string name="login_btn">Đăng nhập</string>
    <string name="pass">Mật khẩu</string>
    <string name="pass_forgot">Quên mật khẩu?</string>
    <string name="pass_reissue_title_admin">Cấp lại mật khẩu</string>
    <string name="pass_reissue_title_user">Quên mật khẩu</string>
    <string name="pass_reissue_guide_admin">Vui lòng nhập địa chỉ e-mail của người dùng để cấp lại mật khẩu</string>
    <string name="pass_reissue_guide_user">Vui lòng nhập địa chỉ e-mail của bạn để đặt lại mật khẩu</string>
    <string name="pass_reissue_success_title">Thành công</string>
    <string name="pass_reissue_hint_admin">Liên kết đặt lại mật khẩu đã được gửi đến email của người dùng</string>
    <string name="pass_reissue_hint_user">Kiểm tra hộp thư đến của bạn, nhấn vào liên kết trong thư để đặt lại mật khẩu</string>
    <string name="send_btn">Gửi</string>
    <string name="resend_btn">Gửi lại</string>
    <string name="manager">Quản lý</string>
    <string name="employee">Nhân viên</string>
    <string name="student">Học viên</string>
    <string name="display_name">Họ tên</string>
    <string name="age">Tuổi</string>
    <string name="phone">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="other">Khác</string>

    <!-- Error   -->
    <string name="email_pass_wrong">E-mail hoặc mật khẩu không chính xác</string>
    <string name="email_not_exist">Tài khoản không tồn tại</string>
    <string name="email_empty">Vui lòng nhập e-mail</string>
    <string name="email_wrong_format">E-mail không đúng định dạng</string>
    <string name="display_name_empty">Vui lòng nhập họ tên</string>
    <string name="age_empty">Vui lòng nhập tuổi</string>
    <string name="phone_empty">Vui lòng nhập số điện thoại</string>
    <string name="address_empty">Vui lòng nhập địa chỉ</string>
    <string name="date_of_birth_empty">Vui lòng nhập ngày sinh</string>
    <string name="date_wrong_format">Ngày không đúng định dạng <i>dd/mm/yyyy</i></string>
    <string name="account_exist">Tài khoản đã tồn tại</string>
    <string name="certificate_name_empty">Vui lòng nhập tên chứng chỉ</string>
    <string name="certificate_issueDate_empty">Vui lòng nhập ngày cấp</string>

    <!--    Create / edit certificate  -->
    <string name="delete_certificate"><u>Xóa chứng chỉ</u></string>

    <!--    Popup search & filter  -->
    <string name="underline_reset"><u>Đặt lại</u></string>
    <string name="search_hint">Tìm kiếm</string>

    <!-- Custom style  -->
    <string name="delete_account"><u>Xóa tài khoản</u></string>
    <string name="delete_student"><u>Xóa học viên</u></string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>