<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/app_padding_horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/default_back_btn_dimens"
            android:layout_height="@dimen/default_back_btn_dimens"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ResetPassUI_TextTitleview"
            android:id="@+id/appCompatTextView"
            android:text="@string/pass_reissue_title_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBack"
            app:layout_constraintVertical_bias="0.058" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ResetPassUI_TextHintView"
            android:id="@+id/appCompatTextView2"
            android:text="@string/pass_reissue_guide_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/appCompatTextView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
            app:layout_constraintVertical_bias="0.0"
            app:lineHeight="24dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/layoutEmail"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
            app:layout_constraintVertical_bias="0.1"
            style="@style/ShadowCardViewForEditText">

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_email_24"
                style="@style/TextInputLayoutForEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    style="@style/ForgotPassEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DefaultErrorTextView_BindWithEditText"
            android:id="@+id/lblEmailValidErr"
            android:text="@string/email_not_exist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/layoutEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layoutEmail"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            style="@style/Button"
            android:layout_marginHorizontal="@dimen/app_padding_horizontal"
            android:layout_marginTop="@dimen/margin_guide_top_heading"
            android:text="@string/send_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEmailValidErr"
            app:layout_constraintVertical_bias="0.05" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Lớp phủ hiển thị loading (progress overlay) -->
    <include layout="@layout/progress_overlay"/>
</androidx.constraintlayout.widget.ConstraintLayout>