<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/app_padding_horizontal"
    android:paddingVertical="@dimen/app_padding_vertical"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/login"
        style="@style/Text"
        android:textSize="50sp"
        android:textColor="@color/primary"
        android:id="@+id/lblLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <!--Email Login Box-->
    <androidx.cardview.widget.CardView
        android:id="@+id/layoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_padding_horizontal"
        android:layout_marginEnd="@dimen/app_padding_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="60dp"
        android:translationZ="@dimen/default_translation_z"
        app:cardCornerRadius="@dimen/default_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblLogin">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_min_height"
            android:drawableStart="@color/white"
            android:minHeight="48dp"
            app:boxBackgroundMode="none"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/sign_in_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sign_in_frame_view"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="0dp"
                style="@style/Text"
                android:textColorHint="@color/text_hint" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <!--Password Login Box-->
    <androidx.cardview.widget.CardView
        android:id="@+id/layoutPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_padding_horizontal"
        android:layout_marginEnd="@dimen/app_padding_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:translationZ="@dimen/default_translation_z"
        app:cardCornerRadius="@dimen/default_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_min_height"
            android:drawableStart="@color/white"
            android:minHeight="48dp"
            app:boxBackgroundMode="none"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/vector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sign_in_frame_view"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="0dp"
                android:textColorHint="@color/text_hint" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>
    <!--  error Password Login Annotation-->
    <!--  error Email Login Annotation-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblError"
        style="@style/Text"
        android:layout_marginTop="@dimen/margin_error_top_textedit"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:text="@string/email_pass_wrong"
        android:textColor="@color/error"
        android:textSize="@dimen/text_auth_err_size"
        app:layout_constraintStart_toStartOf="@id/layoutPass"
        app:layout_constraintTop_toBottomOf="@id/layoutPass"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblForgotPass"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/pass_forgot"
        android:textColor="@color/forgot_password"
        android:textSize="@dimen/text_auth_err_size"
        app:layout_constraintEnd_toEndOf="@id/layoutPass"
        app:layout_constraintTop_toBottomOf="@id/layoutPass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_marginTop="28dp"
        android:text="@string/login_btn"
        app:layout_constraintEnd_toEndOf="@id/layoutPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/layoutPass"
        app:layout_constraintTop_toBottomOf="@+id/lblForgotPass" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Lớp phủ hiển thị loading (progress overlay) -->
    <include layout="@layout/progress_overlay"/>
</androidx.constraintlayout.widget.ConstraintLayout>